test_regress/t/t_interface_typedef_bad.out
%Error: t/t_interface_typedef_bad.v:15:11: Can't find definition of scope/variable: 'not_found'
   15 |   typedef not_found.choice_t choice1_t;   
      |           ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_interface_typedef_bad.v:15:20: Expecting a data type, not a constant
   15 |   typedef not_found.choice_t choice1_t;   
      |                    ^
%Error: t/t_interface_typedef_bad.v:16:19: Expecting a data type, not MEMBERSEL: 'x_t'
   16 |   typedef not_ifc.x_t choice2_t;   
      |                   ^~~
%Error: Exiting due to
